; ModuleID = '/home/carl/AnghaBench/nuklear/example/extr_canvas.c_canvas_end.c'
source_filename = "/home/carl/AnghaBench/nuklear/example/extr_canvas.c_canvas_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nk_context = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i32 }
%struct.nk_canvas = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nk_context*, %struct.nk_canvas*)* @canvas_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @canvas_end(%struct.nk_context* %0, %struct.nk_canvas* %1) #0 {
  %3 = alloca %struct.nk_context*, align 8
  %4 = alloca %struct.nk_canvas*, align 8
  store %struct.nk_context* %0, %struct.nk_context** %3, align 8
  store %struct.nk_canvas* %1, %struct.nk_canvas** %4, align 8
  %5 = load %struct.nk_context*, %struct.nk_context** %3, align 8
  %6 = call i32 @nk_end(%struct.nk_context* %5)
  %7 = load %struct.nk_canvas*, %struct.nk_canvas** %4, align 8
  %8 = getelementptr inbounds %struct.nk_canvas, %struct.nk_canvas* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.nk_context*, %struct.nk_context** %3, align 8
  %11 = getelementptr inbounds %struct.nk_context, %struct.nk_context* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 2
  store i32 %9, i32* %13, align 4
  %14 = load %struct.nk_canvas*, %struct.nk_canvas** %4, align 8
  %15 = getelementptr inbounds %struct.nk_canvas, %struct.nk_canvas* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.nk_context*, %struct.nk_context** %3, align 8
  %18 = getelementptr inbounds %struct.nk_context, %struct.nk_context* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  store i32 %16, i32* %20, align 4
  %21 = load %struct.nk_canvas*, %struct.nk_canvas** %4, align 8
  %22 = getelementptr inbounds %struct.nk_canvas, %struct.nk_canvas* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.nk_context*, %struct.nk_context** %3, align 8
  %25 = getelementptr inbounds %struct.nk_context, %struct.nk_context* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  store i32 %23, i32* %27, align 4
  ret void
}

declare dso_local i32 @nk_end(%struct.nk_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
